# cfs-addons

./: CMakeLists.txt  README.md
src/main/cpp/: CMakeLists.txt
src/main/cpp/cfs/addons/: ContextProvider.cpp  ContextProvider.hpp  Manager.cpp  Manager.hpp  Plugin.cpp  Plugin.hpp  Timer.cpp  Timer.hpp
src/main/resources/cmake/macros/: Bullseye.cmake  DefinePlatformSpecfic.cmake  goals.cmake
src/main/resources/cmake/toolchains/: VxWorks-6.8.x-Toolchain.cmake  VxWorks-7.1.x-Toolchain.cmake  VxWorks.cmake  toolchain.cmake
src/main/resources/config/: Version.hpp.in
src/test/cpp/cfs/addons/: ContextProviderTest.cpp  ContextProviderTest.hpp  ManagerTest.cpp  ManagerTest.hpp  PluginTest.cpp  PluginTest.hpp  Test.hpp  unitTest.cpp
